# FloSystemV2

./: .gitmodules  LICENSE  README.md  arduinoSerialControl.bash  arduinoSerialControl.txt  compose.yaml  floSystem.bash  ohmniConnect.bash  velControlEndEffector.cpp
Contributors/: README.md
apriltag_detector/: CMakeLists.txt  Dockerfile  Readme.md  build_Docker_Apriltag_Detector_Demo.sh  package.xml  runUSBCamera.sh  run_Docker_AprilTagDetector.sh  run_Docker_AprilTagDetector_network.sh  run_apriltag_detector_demo.sh
cakin_ws_dynamixel/: runmotors.bash
dev_system/: Dockerfile  build.sh
docker-ohmni-rgbcamera/: README.md  build_all.sh
docker-ohmni-rgbcamera/ohmni_rgbcamera/example_draw_image/: CMakeLists.txt  package.xml
docker-ohmni-rgbcamera/ohmni_rgbcamera/example_draw_image/src/: example_draw_image.cpp
docker_communication/: CMakeLists.txt  Dockerfile  Readme.md  build_Docker.sh  package.xml  run_docker_network.sh  run_subscriber.sh
docker_communication/launch/: apriltag.launch  empty_world.launch
docker_communication/src/: subscriber.py
docker_communication/urdf/: arrow_model.urdf
docker_communication/world/: simple_world.world
floSystem/: README.md
flo_depthcam/: Dockerfile  ros_entrypoint.sh
flo_face/: README.md
flo_humanoid/: CMakeLists.txt  Dockerfile  README.md  motortest.bash  package.xml  readme.md  runmotors.bash
flo_humanoid/config/: joints
flo_humanoid/msg/: SetJointPosition.msg  SetJointPositions.msg
flo_humanoid/src/: lintertest.cpp  readWriteArm.cpp  readWriteArms.cpp  readWriteJoint.cpp  readWriteRobot.cpp  read_write_humanoid.cpp  read_write_joint.cpp  velControlEndEffector.cpp
flo_humanoid/srv/: GetJointPosition.srv
flo_humanoid_2/: CMakeLists.txt  package.xml
flo_humanoid_defs/: CMakeLists.txt  package.xml
flo_humanoid_defs/flo_humanoid_defs/srv/: GetJointVelocity.srv
flo_humanoid_defs/msg/: SetJointPosition.msg  SetJointPositions.msg  SetJointVelocity.msg
flo_humanoid_defs/srv/: BulkGetItem.srv  GetJointPositions.srv
flo_system/: README.md
flo_web/: Dockerfile  rosbridge_websocket.launch  setup.sh
flov2tag/: package.xml
flov2withhead/: package.xml
gazebo_simulation/: Dockerfile  README.md  build_Docker.sh  (+3 more)
gazebo_simulation/flo_humanoid/: CMakeLists.txt  readme.md
gazebo_simulation/flo_humanoid/config/: joints
gazebo_simulation/flo_humanoid/msg/: SetArmsJointPositions.msg  SetJointPositions.msg
gazebo_simulation/flo_humanoid/src/: publish_motor_positions.cpp  readWriteArm.cpp  readWriteJoint.cpp  subscribe_motor_positions.cpp
gazebo_simulation/flo_humanoid/srv/: GetArmsJointPositions.srv  GetJointPositions.srv
gazebo_simulation/left/: CMakeLists.txt  package.xml
gazebo_simulation/left/config/: joint_names_left.yaml
gazebo_simulation/left/launch/: display.launch  gazebo.launch
gazebo_simulation/left/meshes/: left_gripper.STL  left_low_arm.STL  left_up_arm.STL
gazebo_simulation/left/urdf/: left.csv  left.urdf
gazebo_simulation/movewithhead/: .setup_assistant  CMakeLists.txt
gazebo_simulation/movewithhead/config/: flov2withhead.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
gazebo_simulation/movewithhead/launch/: default_warehouse_db.launch  full_robot_arm_sim.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
gazebo_simulation/movewithhead/script/: getPosition.py  getpostest.py  joint_state_subscriber.py  moveit_joint_publisher.py  mqtt.py  sendJointValue.py  test.py  testnew.py
motor_control_demo/: CMakeLists.txt  Dockerfile  Readme.md  bilateralMotorDemo.bash  buildDockerMotorDemo.sh  motorControlDemo.bash  motorControlDemo.py  package.xml  ros_entrypoint.sh  runDockerMotorDemo.bash  runDockerMotorDemo.sh  runMotorDemo.bash  run_motor_demo.bash  setup.bash  unilateralMotorDemo.bash
motor_control_demo/src/: biMotorControlDemo.py  motorControlDemo.py
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/: CMakeLists.txt  package.xml
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/launch/: empty.launch  willowgarage.launch
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/models/furniture/: readme.md
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/models/kolvn_office_base/: model.config  model.sdf  model0.sdf
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/models/kolvn_office_base/blender_model/: kolvn_office_base.blend  kolvn_office_base.blend1  kolvn_office_base.dae  kolvn_office_base_collision.stl  kolvn_office_base_noglass.blend  kolvn_office_base_noglass.dae
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/models/willowgarage/: model.sdf
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/worlds/: kolvn_office.world  willowgarage.world
tb_gazebo_model/ros_ws/src/tb_sim/gazebo_environment/worlds/obstacle_test/: model.config  model.sdf
tb_gazebo_model/ros_ws/src/tb_sim/tb_gazebo_plugins/: CMakeLists.txt  package.xml
tb_gazebo_model/ros_ws/src/tb_sim/tb_gazebo_plugins/include/tb_gazebo_plugins/: gazebo_ros_servo_pos_drive.h
tb_gazebo_model/ros_ws/src/tb_sim/tb_gazebo_plugins/src/: gazebo_ros_servo_pos_drive.cpp
tb_gazebo_model_/ros_ws/src/tb_sim/tb_teleop/: package.xml
tb_ros_common/ohmnilabs_common/: CMakeLists.txt  package.xml
tb_ros_common/ohmnilabs_common/include/ohmnilabs_common/helper/: params_helper.hpp  visualization_helper.h
tb_ros_common/ohmnilabs_common/src/helper/: visualization_helper.cpp
tb_ros_common/tb_msgs/: CMakeLists.txt  package.xml
tb_ros_common/tb_msgs/msg/: autodock_status.msg  cmd_motor_pwm.msg  pid_debug.msg  servo_position.msg  tbcore_status.msg
tb_ros_common/tb_msgs/srv/: srv_ardock_calib_feedback.srv  srv_ardock_camera_control.srv  srv_ardock_scan.srv  srv_change_pose_goal.srv  srv_connect.srv  srv_connect_ports.srv  srv_enable_sensor_stream.srv  srv_get_servo_info.srv  srv_recalib.srv  srv_reset_wheel_odometry.srv  srv_servo_write_eep.srv
(+371 files in other folders)
