<?xml version="1.0"?>
<package format="2">
  <name>flo_humanoid</name>
  <version>0.0.0</version>
  <description>Contains code to pass commands to and read position information from the dynamixel motors used in the flo v2 humanoid</description>
  <maintainer email="anandaj@seas.upenn.edu">Ajay Anand</maintainer>
  <license>proprietery</license>
  <!-- For future packages strongly consider just using <depend>package</depend> instead of granular depend definitions to simplify -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>flo_humanoid_defs</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
