<?xml version="1.0"?>
<package format="2">
  <name>motor_control_demo</name>
  <version>0.0.0</version>
  <description>The motor_control_demo package</description>
  <maintainer email=anandaj@seas.upenn.edu>Ajay Anand</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
