<?xml version="1.0"?>
<package format="2">
  <name>ohmnilabs_common</name>
  <version>0.0.1</version>
  <description>The ohmnilabs_common package</description>
  <maintainer email="nhattan_pham@ohmnilabs.com">nhattan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

</package>
