<?xml version="1.0"?>
<package format="2">
  <name>tb_msgs</name>
  <version>0.0.1</version>
  <description>The tb_msgs package</description>
  <maintainer email="nhattan_pham@ohmnilabs.com">NhatTan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>
