<?xml version="1.0"?>
<package format="2">
  <name>example_draw_image</name>
  <version>0.1.0</version>
  <description>A simple example of how to subscribe to a image topic from a camera, simple processing, then publish to other ROS nodes</description>
  <maintainer email="nhattan@todo.todo">nhattan</maintainer>
  <license>Apache 2.0</license>
  <author >nhattan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>images_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
