<?xml version="1.0"?>
<package format="2">
  <name>tb_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>The tb_gazebo_plugins package</description>
  <maintainer email="nhattan@todo.todo">nhattan</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
