<?xml version="1.0"?>
<package format="2">
  <name>tb_teleop</name>
  <version>0.1.0</version>
  <description>The tb_teleop package</description>
  <maintainer email="NhatTan@todo.todo">NhatTan</maintainer>
  <license>Apache 2.0</license>
  <author >NhatTan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
